--- a/catalog.html
+++ b/catalog.html
@@ -20,9 +20,9 @@
             </ul>
           </nav>
           <div class="user-block">
-            <a class="search" href="#">search</a>
-            <a class="login" href="#">Вход</a>
-            <a class="cart" href="#">Пусто</a>
+            <a class="user-block__item search" href="#">search</a>
+            <a class="user-block__item login" href="#">Вход</a>
+            <a class="user-block__item cart" href="#">Пусто</a>
           </div>
           <div class="hours-phone">
             <span class="hours">С 10 до 20, ежедневно</span>
@@ -83,25 +83,25 @@
                 <img src="img/ice-orange.png" alt="Апельсиновое" width="267" height="267">
                 <span class="item-price">310 ₽/кг</span>
                 <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-coffee.png" alt="Кофейное" width="267" height="267">
                 <span class="item-price">380 ₽/кг</span>
                 <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-strawberry.png" alt="Клубничное" width="267" height="267">
                 <span class="item-price">355 ₽/кг</span>
                 <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-caramel.png" alt="Крем-брюле" width="267" height="267">
                 <span class="item-price">415 ₽/кг</span>
                 <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
             </div>
             <div class="row clearfix">
@@ -109,25 +109,25 @@
                 <img src="img/ice-cowberry.png" alt="Брусничное" width="267" height="267">
                 <span class="item-price">325 ₽/кг</span>
                 <a class="item-name" href="#">Сливочное с брусничным джемом</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-bilberry.png" alt="Черничное" width="267" height="267">
                 <span class="item-price">410 ₽/кг</span>
                 <a class="item-name" href="#">Сливочно-черничное с цельными ягодами черники</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-lemon.png" alt="Лимонное" width="267" height="267">
                 <span class="item-price">375 ₽/кг</span>
                 <a class="item-name" href="#">Сливочно-лимонное с карамельной присыпкой</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-chocolate.png" alt="С шоколадной стружкой" width="267" height="267">
                 <span class="item-price">320 ₽/кг</span>
                 <a class="item-name" href="#">Сливочное с шоколадной стружкой</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
             </div>
             <div class="row clearfix">
@@ -135,25 +135,25 @@
                 <img src="img/ice-vanilla.png" alt="Сливочно-ванильное" width="267" height="267">
                 <span class="item-price">440₽ ₽/кг</span>
                 <a class="item-name" href="#">Сливочно-ванильное с кусочками шоколада</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-menthol.png" alt="С ментоловым сиропом" width="267" height="267">
                 <span class="item-price">435 ₽/кг</span>
                 <a class="item-name" href="#">Сливочноe с ментоловым сиропом</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-dark-chocolate.png" alt="С кусочками черного шоколада" width="267" height="267">
                 <span class="item-price">355 ₽/кг</span>
                 <a class="item-name" href="#">Сливочное с кусочками черного шоколада</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
               <article class="item">
                 <img src="img/ice-mint.png" alt="С мятным сиропом" width="267" height="267">
                 <span class="item-price">420 ₽/кг</span>
                 <a class="item-name" href="#">Сливочное с мятным сиропом</a>
-                <a class="btn" href="#">Быстрый просмотр</a>
+                <a class="btn btn-preview" href="#">Быстрый просмотр</a>
               </article>
             </div>
           </section>
