--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </ul>
           </nav>
           <div class="user-block">
-            <a class="search" href="#">search</a>
-            <a class="login" href="#">Вход</a>
-            <a class="cart" href="#">Пусто</a>
+            <a class="user-block__item search" href="#">search</a>
+            <a class="user-block__item login" href="#">Вход</a>
+            <a class="user-block__item cart" href="#">Пусто</a>
           </div>
           <div class="hours-phone">
             <span class="hours">С 10 до 20, ежедневно</span>
@@ -56,12 +56,12 @@
             <article class="promo-raspberries clearfix">
               <h2 class="promo__title">Малинка даром!</h2>
               <p class="promo__description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-              <a class="promo__btn" href="#">Хочу варенье!</a>
+              <a class="promo__btn btn" href="#">Хочу варенье!</a>
             </article>
             <article class="promo-chocolate clearfix">
               <h2 class="promo__title">Шоколадки даром!</h2>
               <p class="promo__description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-              <a class="promo__btn" href="#">Хочу шоколадки!</a>
+              <a class="promo__btn btn" href="#">Хочу шоколадки!</a>
             </article>
           </section>
           <section class="catalog clearfix">
@@ -69,25 +69,25 @@
               <img src="img/ice-orange.png" alt="Апельсиновое" width="267" height="267">
               <span class="item-price">310 ₽/кг</span>
               <a class="item-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-              <a class="btn-preview" href="#">Быстрый просмотр</a>
+              <a class="btn-preview btn" href="#">Быстрый просмотр</a>
             </article>
             <article class="item">
               <img src="img/ice-coffee.png" alt="Кофейное" width="267" height="267">
               <span class="item-price">380 ₽/кг</span>
               <a class="item-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
-              <a class="btn-preview" href="#">Быстрый просмотр</a>
+              <a class="btn-preview btn" href="#">Быстрый просмотр</a>
             </article>
             <article class="item">
               <img src="img/ice-strawberry.png" alt="Клубничное" width="267" height="267">
               <span class="item-price">355 ₽/кг</span>
               <a class="item-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-              <a class="btn-preview" href="#">Быстрый просмотр</a>
+              <a class="btn-preview btn" href="#">Быстрый просмотр</a>
             </article>
             <article class="item">
               <img src="img/ice-caramel.png" alt="Крем-брюле" width="267" height="267">
               <span class="item-price">415 ₽/кг</span>
               <a class="item-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-              <a class="btn-preview" href="#">Быстрый просмотр</a>
+              <a class="btn-preview btn" href="#">Быстрый просмотр</a>
             </article>
           </section>
           <article class="about clearfix">
@@ -116,7 +116,7 @@
           <div class="news clearfix">
             <article class="blog">
               <p class="blog__new">Новое в нашем блоге</p>
-              <p class="blog__title">10  способов сервировки фруктовых щербетов к столу</p>
+              <a class="blog__title">10  способов сервировки фруктовых щербетов к столу</a>
             </article>
             <article class="subscribe">
               <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
